# cursodjango

./: .flake8  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflaws/: main.yml
.github/workflows/: main.yml  test-db.yml  test-lint.yml
contrib/: env-sample
contrib/docker/: docker-entrypoint.sh
pypro/: .gitignore  settings.py  urls.py
pypro/base/: admin.py  models.py  tests.py  views.py
