[tool.poetry]
name = "pypro"
version = "0.1.0"
description = "Curso Django Python Pro Br"
authors = ["Lucas Martins <i@lucasmartins.eti.br>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.5"
gunicorn = "^20.1.0"
pytest-django = "^4.5.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pylint = "^2.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
