[tool.poetry]
name = "pypro"
version = "0.1.0"
description = "Curso Django Python Pro Br"
authors = ["Lucas Martins <i@lucasmartins.eti.br>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
gunicorn = "^20.1.0"
pytest-django = "^4.5.2"
python-decouple = "^3.6"
dj-database-url = "^1.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pylint = "^2.14.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
